--- a/index.html
+++ b/index.html
@@ -54,7 +54,54 @@
     </header>
 
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                            <p>Jessica Skidmore</p>
+                    </div> 
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                            <p>18 Dorothy Avenue, Glen Parva, Leicester, Leicestershire, England, LE2 9JD</p>
+                    </div> 
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone:
+                        </p>
+                    </div>
+                    <div class="value">
+                            <p>07595091769</p>
+                    </div> 
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                            <p>jessswork18@gmail.com</p>
+                    </div>                    
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
