Added resume.html content and styling

--- a/resume.html
+++ b/resume.html
@@ -53,11 +53,106 @@
         </div>
     </header>
 
-    <section>
-
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-work-history section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="history-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="10/2021 - Present">
+                        <h4>Leicester City Council</h4>
+                        <p>Democratic Services Officer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2019 - 06/2020">
+                        <h4>De Montfort University</h4>
+                        <p>Building Monitor</p>
+                    </div>
+                    <div class="timeline-item" data-dates="10/2017 - 05/2019">
+                        <h4>De Montfort University</h4>
+                        <p>Learning Spaces Assistant</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript.
+                                    I also have experience in Front End Frameworks such as React and Angular.
+                                    I bring a vast base of creativity stemming my knowledge and experience in Art.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-cogs" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I specialise in E-Commerce based web applications. My projects utilise
+                                    my understanding of web-marketing and search engine optimisation.
+                                    I also have experience in document-based data using Python and Django.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                                <span class="sr-only">60% complete</span>
+                            </div>
+                            <span class="progress-type">Javascript</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%;">
+                                <span class="sr-only">50% complete</span>
+                            </div>
+                            <span class="progress-type">Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%;">
+                                <span class="sr-only">30% complete</span>
+                            </div>
+                            <span class="progress-type">C#</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer id="footer-details" class="container-fluid">
+    <footer class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
