--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
     </section>
 
-    <footer id="footer-details" class="container-fluid">
+    <footer class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
