--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,31 @@
         </div>
     </header>
 
-    <section>
-
+    <section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                <h5 class="uppercase text-center">Lets work together.</h5>
+                <div class="center-form">
+                    <form action="" method="post">
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
+                            required />
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required />
+                        <textarea name="projectsummary" id="projectsummary" rows="5" class="form-control" 
+                            placeholder="Project Description" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer id="footer-details" class="container-fluid">
+    <footer class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
